--- a/index.html
+++ b/index.html
@@ -1,253 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+<html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="author" content="Chao Wen" />
-    <meta name="keywords" content="Chao Wen,Computer,Vision" />
-
-    <link href="favicon.png" rel="icon" />
-
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-
-    <link href="css/fontawesome.min.css" rel="stylesheet" />
-    <link href="css/solid.min.css" rel="stylesheet" />
-    <link href="css/brands.min.css" rel="stylesheet" />
-
-    <link href="css/style.css" rel="stylesheet" />
-    <title>Chao Wen</title>
+    <link rel="StyleSheet" href="style.css" type="text/css" media="all">
+    <title>WFB's resume</title>
+    <!-- Place this tag in your head or just before your close body tag. -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 
 <body>
-    <div class="container-fluid">
-        <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <serif>Chao Wen</serif>
-                </a>
-
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
-                    aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarToggler">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-item nav-link" href="#home">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-item nav-link" href="#">Blog</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <div class="sec-wrapper home-wrapper" id="home">
-            <div class="container-fluid">
-                <div class="row align-items-center">
-                    <div class="col-sm-1 placeholder"></div>
-                    <div class="col-sm-4 col-md-4">
-                        <div class="picture">
-                            <img src="images/chaowen_uestc.png" class="img-responsive" alt="[Avatar]"
-                                onmouseover="this.src='images/chaowen_uestc.png'"
-                                onmouseout="this.src='images/chaowen_uestc.png'" />
-                        </div>
-                    </div>
-                    <div class="col-sm-1 placeholder"></div>
-                    <div class="col-sm-6 col-wrapper">
-                        <div class="description">
-                            <h1 class="name">Chao Wen</h1>
-                            <div>Second-Year M.S. Student, FDU</div>
-                            <div>Advised by Prof. Yanwei Fu and Prof. Xiangyang Xue</div>
-                            <div id="graduate">
-                                Expected to graduate in the summer of <b>2021</b>
-                            </div>
-                            <div>Email: cwen18 (at) fudan.edu.cn</div>
-                            <div><a href="documents/cv.pdf">[Curriculum Vitae]</a></div>
-
-                            <ul class="social-icon">
-                                <li>
-                                    <a title="Github" href="https://github.com/walsvid"><i class="fab fa-github"
-                                            aria-hidden="true"></i></a>
-                                </li>
-                                <li>
-                                    <a title="Linkedin" href="https://www.linkedin.com/in/chaowen"><i
-                                            class="fab fa-linkedin" aria-hidden="true"></i></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-sm-1 placeholder"></div>
-                </div>
-            </div>
-        </div>
-        <div class="sec-wrapper pub-wrapper" id="pub">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col col-wrapper">
-                        <div class="section-title">
-                            <b>Publications</b>
-                            <hr style="margin-top: 0px;" />
-                        </div>
-                    </div>
-                </div>
-                <div class="row align-items-center section-item">
-                    <div class="col-xs-12 col-md-3 col-lg-4 col-wrapper">
-                        <div class="figure">
-                            <img src="images/neuralpose.png" alt="[NeuralPose]" />
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-md-9 col-lg-8 col-wrapper introbox">
-                        <div class="title">
-                            <b>Neural Pose Transfer by Spatially Adaptive Instance
-                                Normalization</b>
-                        </div>
-                        <div class="authors">
-                            Jiashun Wang<sup>*</sup>,
-                            <me>Chao Wen<sup>*</sup></me>, <a href="http://yanweifu.github.io/">Yanwei Fu</a>,
-                            Haitao Lin, Tianyun Zou,
-                            <a href="http://www.cs.fudan.edu.cn/?page_id=1984">Xiangyang Xue</a>,
-                            <a href="https://www.zhangyinda.com/">Yinda Zhang</a>
-                        </div>
-                        <div>
-                            IEEE Conference on Computer Vision and Pattern Recognition
-                            (CVPR) 2020
-                        </div>
-                        <!-- <a href="#">[Project Page]</a> -->
-                        <a href="#">[Paper (Coming Soon)]</a>
-                        <!-- <a href="#">[Code (Coming Soon)]</a> -->
-                    </div>
-                </div>
-                <div class="row align-items-center section-item">
-                    <div class="col-xs-12 col-md-3 col-lg-4 col-wrapper">
-                        <div class="figure">
-                            <img src="images/p2mpp.png" alt="[Pixel2Mesh++]" />
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-md-9 col-lg-8 col-wrapper introbox">
-                        <div class="title">
-                            <b>Pixel2Mesh++: Multi-View 3D Mesh Generation via
-                                Deformation</b>
-                        </div>
-                        <div class="authors">
-                            <me>Chao Wen<sup>*</sup></me>, <a href="https://www.zhangyinda.com/">Yinda
-                                Zhang</a><sup>*</sup>, <a href="http://www.lizhuwen.com/">Zhuwei Li</a><sup>*</sup>,
-                            <a href="http://yanweifu.github.io/">Yanwei Fu</a>
-                        </div>
-                        <div>
-                            IEEE Conference on International Conference on Computer Vision
-                            (ICCV) 2019
-                        </div>
-                        <a href="https://walsvid.github.io/Pixel2MeshPlusPlus/">[Project Page]</a>
-                        <a href="https://arxiv.org/abs/1908.01491">[Paper]</a>
-                        <a href="https://github.com/walsvid/Pixel2MeshPlusPlus/">[Code]</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="sec-wrapper pub-wrapper" id="pub">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col col-wrapper">
-                        <div class="section-title">
-                            <b>Projects</b>
-                            <hr style="margin-top: 0px;" />
-                        </div>
-                    </div>
-                </div>
-                <div class="row align-items-center section-item">
-                    <div class="col-xs-12 col-md-3 col-lg-4 col-wrapper">
-                        <div class="figure">
-                            <img src="images/3drecon.gif" alt="[3DRecon]" />
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-md-9 col-lg-8 col-wrapper introbox">
-                        <div class="title">
-                            <b>3D Shape Generation Baselines</b>
-                        </div>
-                        <p class="projectintro">
-                            This work implement 3D shape generation baselines using PyTorch. Including:
-                            <code>DISN</code>,
-                            <code>Pixel2Mesh</code>,
-                            <code>3DGAN</code>
-                        </p>
-                        <a href="https://github.com/walsvid/Generation3D">[Code]</a>
-                    </div>
-                </div>
-                <div class="row align-items-center section-item">
-                    <div class="col-xs-12 col-md-3 col-lg-4 col-wrapper">
-                        <div class="figure">
-                            <img src="images/coordconv.png" alt="[CoordConv]" />
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-md-9 col-lg-8 col-wrapper introbox">
-                        <div class="title">
-                            <b>PyTorch Implementation of CoordConv</b>
-                        </div>
-                        <p class="projectintro">
-                            This work implement CoordConv for N-D ConvLayers with visualization experiments, reference
-                            from the original
-                            <a href="https://arxiv.org/abs/1807.03247">paper</a>. And extends the
-                            <code>CoordinateChannel</code> concatenation from 2D to 1D and 3D tensors.
-                        </p>
-                        <a href="https://github.com/walsvid/CoordConv">[Code]</a>
-                    </div>
-                </div>
-                <div class="row align-items-center section-item">
-                    <div class="col-xs-12 col-md-3 col-lg-4 col-wrapper">
-                        <div class="figure">
-                            <img src="images/aodnet.jpeg" alt="[AODNet]" />
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-md-9 col-lg-8 col-wrapper introbox">
-                        <div class="title">
-                            <b>PyTorch Implementation of AOD-Net</b>
-                        </div>
-                        <p class="projectintro">
-                            This project is a pytorch implementation of
-                            <a
-                                href="http://openaccess.thecvf.com/content_ICCV_2017/papers/Li_AOD-Net_All-In-One_Dehazing_ICCV_2017_paper.pdf">AOD-Net</a>
-                            : All-in-One Network for Dehazing. It contains both train and
-                            test code and pre-trained pytorch weights.
-                        </p>
-                        <a href="https://github.com/walsvid/AOD-Net-PyTorch">[Code]</a>
-                    </div>
-                </div>
-                <div class="row align-items-center section-item">
-                    <div class="col-xs-12 col-md-3 col-lg-4 col-wrapper">
-                        <div class="figure">
-                            <img src="images/p2m.png" alt="[Pixel2Mesh]" />
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-md-9 col-lg-8 col-wrapper introbox">
-                        <div class="title">
-                            <b>Maintainer of Pixel2Mesh</b>
-                        </div>
-                        <p class="projectintro">
-                            I am now a collaborator of
-                            <a href="https://github.com/nywang16">Nanyang</a>'s outstanding work <a
-                                href="https://arxiv.org/abs/1804.01654">Pixel2Mesh</a>, responsible for code update and
-                            routine maintenance, as well as solve issues.
-                        </p>
-
-                        <a href="https://github.com/nywang16/Pixel2Mesh">[Code]</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="bottombar">
-            <div class="col-sm year">
-                2016-2020
-            </div>
-        </div>
+    <div class="center-div">
+        <h1><a href="./dataset.html">My dataset</a></h1>
     </div>
-    <script src="js/jquery-3.3.1.slim.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
 </body>
 
 </html>
