--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="center-div">
-        <h1><a href="./dataset.html">My dataset</a></h1>
+        <h1><a href="./VC-Clothes">My dataset</a></h1>
     </div>
 </body>
 
