--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             Yang Wu<sup>*</sup>, Xuelin Qian, <a href="http://yanweifu.github.io/">Yanwei Fu</a>
                         </div>
                         <div>
-                            Under Review
+                            CVPR 2020 Biometrics Workshop
                         </div>
                         <a href="https://wanfb.github.io/dataset.html">[Project Page]</a>
                         <a href="https://arxiv.org/pdf/2003.04070.pdf">[Paper]</a>
